[gd_scene load_steps=17 format=2]

[ext_resource path="res://GFX/darkBrown.jpg" type="Texture" id=1]
[ext_resource path="res://Traps/TeasureBoxPlatform.tscn" type="PackedScene" id=2]
[ext_resource path="res://GFX/torchmap.png" type="Texture" id=3]
[ext_resource path="res://GFX/ground_snow.png" type="Texture" id=4]
[ext_resource path="res://GFX/ControlStand.png" type="Texture" id=7]
[ext_resource path="res://GFX/LeverRest.png" type="Texture" id=8]
[ext_resource path="res://Player/Player1.tscn" type="PackedScene" id=9]
[ext_resource path="res://GFX/UnpressedButton.png" type="Texture" id=10]
[ext_resource path="res://GFX/GreyTile.png" type="Texture" id=11]
[ext_resource path="res://Fonts/PixelEmulator-xq08.ttf" type="DynamicFontData" id=12]
[ext_resource path="res://SCRIPTS/ControlPanelStand.gd" type="Script" id=13]

[sub_resource type="CapsuleShape2D" id=2]
radius = 134.66

[sub_resource type="DynamicFont" id=3]
size = 64
font_data = ExtResource( 12 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.109804, 0.0980392, 0.0980392, 1 )
border_color = Color( 0.952941, 0.701961, 0.0431373, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="DynamicFont" id=5]
size = 64
font_data = ExtResource( 12 )

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 12 )

[node name="Node2D" type="Node2D"]

[node name="BackGround" type="Sprite" parent="."]
scale = Vector2( 10, 10 )
texture = ExtResource( 1 )

[node name="GroundSnow" type="Sprite" parent="."]
position = Vector2( 848, -165 )
scale = Vector2( 2.52368, 3.64894 )
texture = ExtResource( 4 )

[node name="TeasureBoxPlatform" parent="." instance=ExtResource( 2 )]
position = Vector2( 823, 415 )

[node name="TeasureBoxPlatform2" parent="." instance=ExtResource( 2 )]
position = Vector2( -77, 415 )

[node name="TeasureBoxPlatform3" parent="." instance=ExtResource( 2 )]
position = Vector2( 1723, 415 )

[node name="ControlPanelBody" type="StaticBody2D" parent="." groups=["ControlPanel"]]
position = Vector2( 832, 965 )
collision_layer = 0
collision_mask = 0
script = ExtResource( 13 )

[node name="ControlPanelStand" type="Sprite" parent="ControlPanelBody"]
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ControlPanelBody"]
visible = false
shape = SubResource( 2 )

[node name="Light2D" type="Light2D" parent="ControlPanelBody"]
visible = false
rotation = -1.5708
texture = ExtResource( 3 )
offset = Vector2( 783.842, -3.18341 )
texture_scale = 2.5
shadow_enabled = true

[node name="Position2D" type="Position2D" parent="ControlPanelBody"]
position = Vector2( 0, 50 )

[node name="Label" type="Label" parent="ControlPanelBody"]
margin_left = -31.0
margin_top = 136.0
margin_right = 45.0
margin_bottom = 212.0
size_flags_vertical = 1
custom_colors/font_color = Color( 0.980392, 0.0352941, 0.0352941, 1 )
custom_fonts/font = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
text = "R"
align = 1
valign = 1

[node name="Label2" type="Label" parent="ControlPanelBody"]
visible = false
margin_left = -293.0
margin_top = 178.0
margin_right = 521.0
margin_bottom = 353.0
custom_fonts/font = SubResource( 5 )
text = "PRESS ESC TO EXIT"
align = 1
valign = 1

[node name="PanelBox" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.705882 )
position = Vector2( 1567, 766 )
texture = ExtResource( 11 )

[node name="Lever" type="Sprite" parent="PanelBox"]
position = Vector2( -104, 19 )
texture = ExtResource( 8 )

[node name="ButtonLeft" type="Sprite" parent="PanelBox"]
position = Vector2( 51, -12 )
texture = ExtResource( 10 )

[node name="ButtonRight" type="Sprite" parent="PanelBox"]
position = Vector2( 173, -12 )
texture = ExtResource( 10 )

[node name="UP" type="Label" parent="PanelBox"]
margin_left = -231.0
margin_top = -203.0
margin_right = -191.0
margin_bottom = -189.0
custom_fonts/font = SubResource( 1 )
text = "W"

[node name="DOWN" type="Label" parent="PanelBox"]
margin_left = -231.0
margin_top = 140.0
margin_right = -181.0
margin_bottom = 216.0
custom_fonts/font = SubResource( 1 )
text = "S"

[node name="LEFT" type="Label" parent="PanelBox"]
margin_left = 32.0
margin_top = 68.0
margin_right = 82.0
margin_bottom = 144.0
custom_fonts/font = SubResource( 1 )
text = "A"

[node name="RIGHT" type="Label" parent="PanelBox"]
margin_left = 148.0
margin_top = 68.0
margin_right = 198.0
margin_bottom = 144.0
custom_fonts/font = SubResource( 1 )
text = "D"

[node name="Player" parent="." instance=ExtResource( 9 )]
position = Vector2( 352, 718 )

[node name="Camera2D" type="Camera2D" parent="Player"]
current = true
zoom = Vector2( 3, 3 )
smoothing_enabled = true

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color( 0.380392, 0.372549, 0.372549, 1 )
